# bezier-curves

./: .gitignore  CMakeLists.txt  README.md  config.json  points.json
includes/: App.h  App.hpp  Point.h
includes/platform/: platform.h
includes/utils/: Config.h
src/: App.cpp  App.h  App.hpp  Point.cpp  main.cpp
src/core/common/: MouseButton.hpp  Vector2f.hpp
src/core/events/: EventBus.hpp  IEvent.hpp
src/core/listeners/: IListener.hpp
src/core/mappers/: SFMLMapper.cpp  SFMLMapper.hpp
src/core/math/: Geometry.cpp  Geometry.hpp
src/core/utils/: AssetManager.cpp  AssetManager.hpp  Config.cpp  Config.hpp  Config.mm  Json.cpp  Json.hpp  JsonUtils.cpp  JsonUtils.hpp  Mem.cpp  Mem.h  Mem.hpp  Mem.mm
src/elements/: Debug.cpp  Debug.hpp  Divider.cpp  Divider.hpp  Element.hpp  Metrics.cpp  Metrics.hpp  QuadraticBezier.cpp  QuadraticBezier.hpp
src/regions/: Bezier.cpp  Bezier.hpp  Debug.cpp  Debug.hpp  Region.hpp
src/scenes/: Bezier.cpp  Bezier.hpp  Scene.hpp
src/ui/common/: ControlPoint.hpp  Path.hpp  Point.hpp  RegionNamesEnum.hpp  Segment.hpp
src/ui/elements/: Divider.cpp  Divider.hpp  Element.hpp  LerpBezier.cpp  LerpBezier.hpp  LineTool.cpp  LineTool.hpp  Logo.cpp  Logo.hpp  Metrics.cpp  Metrics.hpp  QuadraticBezier.cpp  QuadraticBezier.hpp
src/ui/events/: MousePressedEvent.cpp  MousePressedEvent.hpp
src/ui/listeners/: MouseClickRegionMatcherListener.cpp  MouseClickRegionMatcherListener.hpp
src/ui/regions/: Bezier.cpp  Bezier.hpp  Canvas.cpp  Canvas.hpp  Debug.cpp  Debug.hpp  Region.cpp  Region.hpp
src/ui/rendering/: Bezier.cpp  Bezier.hpp
src/ui/utils/: ScopedWindowClipping.hpp
src/utils/: Config.mm  Mem.mm  platform.cpp  platform.mm
